Fix paragraph wrapping issue on mobile devices

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ input {
     margin: 8px 0;
 }
 
-p {
+#result {
     height: 24px;
 }
 
